--- a/uyeyeni/atakumtenis.html
+++ b/uyeyeni/atakumtenis.html
@@ -6,6 +6,7 @@
     <title>Atakum Tenis Kulübü | Samsun</title>
     <meta name="description" content="Samsun Atakum'da tenisin merkezi! Profesyonel kortlar, uzman eğitmenler ve dinamik bir atmosfer. Atakum Tenis Kulübü'ne siz de katılın.">
     <meta name="keywords" content="atakum tenis, samsun tenis, tenis kulübü, tenis dersi, atakum, balaç, mafen okulları">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 100 100%27%3E%3Ccircle cx=%2750%27 cy=%2750%27 r=%2748%27 fill=%27%234f46e5%27/%3E%3Ctext x=%2750%27 y=%2772%27 font-family=%27Arial,sans-serif%27 font-size=%2760%27 font-weight=%27bold%27 fill=%27white%27 text-anchor=%27middle%27%3ES%3C/text%3E%3C/svg%3E">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -16,7 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700;900&display=swap" rel="stylesheet">
     
     <!-- Favicon (Tenis Topu Emojisi) -->
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎾</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 100 100%27%3E%3Ccircle cx=%2750%27 cy=%2750%27 r=%2748%27 fill=%27%234f46e5%27/%3E%3Ctext x=%2750%27 y=%2772%27 font-family=%27Arial,sans-serif%27 font-size=%2760%27 font-weight=%27bold%27 fill=%27white%27 text-anchor=%27middle%27%3ES%3C/text%3E%3C/svg%3E">
 
     <style>
         /* Özel Stiller */
@@ -566,4 +567,6 @@
     </script>
 </body>
 </html>
+
+
 
