--- a/uyeyeni/index.html
+++ b/uyeyeni/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sporcum | Spor Kulübü Yönetiminde Dijital Devrim</title>
+    <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 100 100%27%3E%3Ccircle cx=%2750%27 cy=%2750%27 r=%2748%27 fill=%27%234f46e5%27/%3E%3Ctext x=%2750%27 y=%2772%27 font-family=%27Arial,sans-serif%27 font-size=%2760%27 font-weight=%27bold%27 fill=%27white%27 text-anchor=%27middle%27%3ES%3C/text%3E%3C/svg%3E">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -63,6 +64,7 @@
             </a>
             <nav class="hidden md:flex items-center space-x-8">
                 <a href="#hizmetler" class="text-slate-600 hover:text-blue-600 transition-colors">Hizmetler</a>
+                <a href="detay.html" class="text-blue-600 hover:text-blue-700 transition-colors font-semibold">🎯 Canlı Demo</a>
                 <a href="#neden-biz" class="text-slate-600 hover:text-blue-600 transition-colors">Neden Biz?</a>
                 <a href="#referanslar" class="text-slate-600 hover:text-blue-600 transition-colors">Referanslar</a>
                 <a href="#iletisim" class="text-slate-600 hover:text-blue-600 transition-colors">İletişim</a>
@@ -81,6 +83,7 @@
         </div>
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4 border-t border-slate-200 pt-4">
             <a href="#hizmetler" class="block py-2 text-slate-600 hover:text-blue-600">Hizmetler</a>
+            <a href="detay.html" class="block py-2 text-blue-600 hover:text-blue-700 font-semibold">🎯 Canlı Demo</a>
             <a href="#neden-biz" class="block py-2 text-slate-600 hover:text-blue-600">Neden Biz?</a>
             <a href="#referanslar" class="block py-2 text-slate-600 hover:text-blue-600">Referanslar</a>
             <a href="#iletisim" class="block py-2 text-slate-600 hover:text-blue-600">İletişim</a>
@@ -283,7 +286,7 @@
                             <h2 class="text-4xl md:text-5xl font-bold mb-4">Kulübünüzü Dönüştürmeye Hazır Mısınız?</h2>
                             <p class="text-blue-100 text-lg mb-8">Aşağıdaki formu doldurun, uzman ekibimiz size özel bir demo sunumu için en kısa sürede sizinle iletişime geçsin.</p>
                             <div class="space-y-4">
-                                <p class="flex items-center"><i data-lucide="mail" class="w-5 h-5 mr-3 text-blue-200"></i> info@sporcum.com.tr</p>
+                                <p class="flex items-center"><i data-lucide="mail" class="w-5 h-5 mr-3 text-blue-200"></i> info@sporcum.co</p>
                                 <p class="flex items-center"><i data-lucide="phone" class="w-5 h-5 mr-3 text-blue-200"></i> 0362 360 00 64</p>
                             </div>
                         </div>
@@ -429,7 +432,7 @@
             const jsonString = JSON.stringify(formData);
             
             // Webhook'a göndermeyi dene (CORS hatası bekleniyor ama yine de deneyelim)
-            fetch('https://n8n.edu-ai.online/webhook-test/ea07406f-e3e7-4122-a268-ccc8babf155d', {
+            fetch('https://n8n.edu-ai.online/webhook/ea07406f-e3e7-4122-a268-ccc8babf155d', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
@@ -478,3 +481,5 @@
     </script>
 </body>
 </html>
+
+
