chore: Evolution API mesaj çekme hata mesajı daha kullanıcı dostu

--- a/uyeyeni/admin.html
+++ b/uyeyeni/admin.html
@@ -8850,9 +8850,9 @@ Görev detaylarını kontrol ediniz.</textarea>
                 }
                 
                 if (allMessages.length === 0) {
-                    console.warn(`━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━`);
-                    console.warn(`⚠️ TÜM ENDPOINT'LER BAŞARISIZ`);
-                    console.warn(`━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━`);
+                    console.log(`━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━`);
+                    console.log(`ℹ️ Evolution API'den mesaj alınamadı (Supabase'den devam ediliyor)`);
+                    console.log(`━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━`);
                 }
                 
                 return allMessages;
