fix: Admin panelinde veli TC kimlik numarası opsiyonel yapıldı

--- a/uyeyeni/admin.html
+++ b/uyeyeni/admin.html
@@ -35520,7 +35520,7 @@ Görev detaylarını kontrol ediniz.</textarea>
                                  <div class="form-grid">
                                      <div class="form-group"><label for="memberTypePre">Kayıt Tipi *</label><select class="form-control" name="memberType" id="memberTypePre" required><option value="child">Çocuk</option><option value="adult">Yetişkin</option></select></div>
                                      <div class="form-group" id="parentName1Group"><label for="parentNamePre">Veli Adı Soyadı *</label><input type="text" id="parentNamePre" class="form-control" name="parentName"></div>
-                                     <div class="form-group" id="parentTcGroup"><label for="parentTcPre">🆔 Veli TC Kimlik No *</label><input type="text" id="parentTcPre" class="form-control" name="parentTc" required pattern="[0-9]{11}" maxlength="11" placeholder="11 haneli TC kimlik numarası"></div>
+                                     <div class="form-group" id="parentTcGroup"><label for="parentTcPre">🆔 Veli TC Kimlik No</label><input type="text" id="parentTcPre" class="form-control" name="parentTc" pattern="[0-9]{11}" maxlength="11" placeholder="11 haneli TC kimlik numarası (opsiyonel)"></div>
                                      <div class="form-group" id="phone1Group"><label for="preRegPhonePre">Veli Telefon *</label><input type="tel" id="preRegPhonePre" class="form-control" name="phone" required pattern="0[0-9]{10}" maxlength="11"></div>
                                      <div class="form-group" id="parentName2Group"><label for="parentName2Pre">Veli 2 Adı Soyadı (İsteğe Bağlı)</label><input type="text" id="parentName2Pre" class="form-control" name="parentName2"></div>
                                      <div class="form-group" id="phone2Group"><label for="preRegPhone2Pre">Veli 2 Telefon</label><input type="tel" id="preRegPhone2Pre" class="form-control" name="phone2" pattern="0[0-9]{10}" maxlength="11"></div>
@@ -38871,8 +38871,8 @@ Branş: {BRANS}<br>
                             <input type="text" class="form-control" name="Ad_Soyad" required>
                         </div>
                         <div class="form-group">
-                            <label>🆔 Veli 1 TC Kimlik No <span class="required-star">*</span></label>
-                            <input type="text" class="form-control" name="parentTc" required pattern="[0-9]{11}" maxlength="11" placeholder="11 haneli TC kimlik numarası">
+                            <label>🆔 Veli 1 TC Kimlik No</label>
+                            <input type="text" class="form-control" name="parentTc" pattern="[0-9]{11}" maxlength="11" placeholder="11 haneli TC (opsiyonel)">
                         </div>
                         <div class="form-group">
                             <label>📞 Telefon 1 <span class="required-star">*</span></label>
